force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Product_Family__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Product_Family__c</fullName>
    <inlineHelpText>Used for classifying items for filtering and reporting.  This field is the second level grouping for items.</inlineHelpText>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GFERP__Product_Family</valueSetName>
    </valueSet>
</CustomField>