force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Product_Group__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Product_Group__c</fullName>
    <inlineHelpText>Used for classifying items for filtering and reporting.  This field is the third level grouping for items and it is the subset for Product Family.</inlineHelpText>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GFERP__Product_Group</valueSetName>
    </valueSet>
</CustomField>