force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Purchasing_Agent__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Purchasing_Agent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The default Purchasing Agent for the item if applicable.</inlineHelpText>
    <label>Purchasing Agent</label>
    <referenceTo>GFERP__Salesperson_Purchaser__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>