force-app/main/default/objects/GFERP__Item__c/fields/GFERP__QC_Required__c.field-meta.xml
<CustomField>
    <fullName>GFERP__QC_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this field will require quality control tests to be performed when receiving or producing the item.</inlineHelpText>
    <label>QC Required</label>
    <type>Checkbox</type>
</CustomField>