force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Qty_Base_on_Bin_Content__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Qty_Base_on_Bin_Content__c</fullName>
    <inlineHelpText>The base quantity of the item calculated from all bin content records.</inlineHelpText>
    <label>Qty. Base on Bin Content</label>
    <summarizedField>GFERP__Bin_Content__c.GFERP__Qty_Base__c</summarizedField>
    <summaryForeignKey>GFERP__Bin_Content__c.GFERP__Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>