force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Qty_Base_on_Hand__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Qty_Base_on_Hand__c</fullName>
    <inlineHelpText>The base quantity on hand of the item calculated from all item ledger entry records.</inlineHelpText>
    <label>Qty. Base on Hand</label>
    <summarizedField>GFERP__Item_Ledger_Entry__c.GFERP__Qty_Base__c</summarizedField>
    <summaryForeignKey>GFERP__Item_Ledger_Entry__c.GFERP__Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>