force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Qty_Per_Pallet__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Qty_Per_Pallet__c</fullName>
    <inlineHelpText>Used on the Daily Production page for the output reporting.</inlineHelpText>
    <label>Qty. Per Pallet</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>