force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Rental_Item__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Rental_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>null</inlineHelpText>
    <label>Rental Item</label>
    <type>Checkbox</type>
</CustomField>