force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Reorder_Cycle__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Reorder_Cycle__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Working with the Reorder Cycle Time Unit, the reorder cycle determines the fixed regular interval to order the item.</inlineHelpText>
    <label>Reorder Cycle</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>