force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Reorder_Cycle_Time_Unit__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Reorder_Cycle_Time_Unit__c</fullName>
    <inlineHelpText>Working with the Reorder Cycle, the reorder cycle determines the fixed regular interval to order the item.</inlineHelpText>
    <label>Reorder Cycle Time Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GFERP__Reorder_Cycle</valueSetName>
    </valueSet>
</CustomField>