force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Reorder_Policy__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Reorder_Policy__c</fullName>
    <inlineHelpText>Used to determine the most efficient method to order inventory.  The default option is Fixed Reorder Qty.</inlineHelpText>
    <label>Reorder Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Reorder Qty.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>