force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Reorder_Quantity__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Reorder_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter the default economic order quantity for the item.</inlineHelpText>
    <label>Reorder Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>