force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Replenishment_System__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Replenishment_System__c</fullName>
    <inlineHelpText>Enter the default method to replenish the inventory for the item with two possible options: Purchase or Work Order.  if the item can be both purchased and manufactured, enter Work Order.</inlineHelpText>
    <label>Replenishment System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
                <default>true</default>
                <label>Purchase</label>
            </value>
            <value>
                <fullName>Work Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>