force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Safety_Stock__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Safety_Stock__c</fullName>
    <inlineHelpText>The default level of extra inventory that is maintained to mitigate the risk of stockouts.</inlineHelpText>
    <label>Safety Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>