force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Sales_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Sales_Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the default Unit of Measure to be used on sales orders.</inlineHelpText>
    <label>Sales Unit of Measure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GFERP__Item_Unit_of_Measure__c.GFERP__Item__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GFERP__Item_Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Items (Sales Unit of Measure)</relationshipLabel>
    <relationshipName>ItemSalesUOM</relationshipName>
    <type>Lookup</type>
</CustomField>