force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Serial_No_Series__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Serial_No_Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The numbering series to be used for the serial numbers created for the item.</inlineHelpText>
    <label>Serial No. Series</label>
    <referenceTo>GFERP__Numbering_Series__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>