force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Serial_Tracked__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Serial_Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this item requires serial number for all inventory transactions.</inlineHelpText>
    <label>Serial Tracked</label>
    <type>Checkbox</type>
</CustomField>