force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Single_Batch_Printing__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Single_Batch_Printing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the Batch Report on Work Order will print this item batch by batch.</inlineHelpText>
    <label>Single Batch Printing</label>
    <type>Checkbox</type>
</CustomField>