force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Standard_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Standard_Base_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The Standard Base Price for the item.</inlineHelpText>
    <label>Standard Base Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>