force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Standard_Material_Base_Cost__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Standard_Material_Base_Cost__c</fullName>
    <inlineHelpText>The Standard Material Base Cost for the item.</inlineHelpText>
    <label>Standard Material Base Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>