force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Standard_Profit__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Standard_Profit__c</fullName>
    <formula>GFERP__Standard_Base_Price__c -  GFERP__Standard_Base_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated standard profit of the item.  (Standard Base Price - Standard Base Cost)</inlineHelpText>
    <label>Standard Profit</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>