force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Standard_Profit_Pct__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Standard_Profit_Pct__c</fullName>
    <formula>if ( ( GFERP__Standard_Base_Price__c ) &lt;&gt; 0, ( GFERP__Standard_Base_Price__c -  GFERP__Standard_Base_Cost__c ) / ( GFERP__Standard_Base_Price__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated standard profit % of the item.  (Standard Profit / Standard Base Price)</inlineHelpText>
    <label>Standard Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>