force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Tax_Group__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Tax_Group__c</fullName>
    <inlineHelpText>The Tax Group for the Item used to calculate Sales Tax.</inlineHelpText>
    <label>Tax Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GFERP__Tax_Group</valueSetName>
    </valueSet>
</CustomField>