force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Technical_Sheet2__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Technical_Sheet2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the default Technical Sheet for the Item.</inlineHelpText>
    <label>Technical Sheet</label>
    <referenceTo>GFERP__Technical_Sheet2__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>