force-app/main/default/objects/GFERP__Item__c/fields/GFERP__UPC__c.field-meta.xml
<CustomField>
    <fullName>GFERP__UPC__c</fullName>
    <inlineHelpText>UPC of the Item.</inlineHelpText>
    <label>UPC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>