force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Vendor__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The preferred Vendor for the item.</inlineHelpText>
    <label>Preferred Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>