force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Work_Center__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Work_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this service item is used as a work center for the routing.</inlineHelpText>
    <label>Work Center</label>
    <type>Checkbox</type>
</CustomField>