force-app/main/default/objects/GFERP__Item__c/fields/IsGiftVoucher__c.field-meta.xml
<CustomField>
    <fullName>IsGiftVoucher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGiftVoucher</label>
    <type>Checkbox</type>
</CustomField>