force-app/main/default/objects/GFERP__Item__c/fields/Manufacturer_SKU__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_SKU__c</fullName>
    <label>Manufacturer SKU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>