force-app/main/default/objects/GFERP__Item__c/fields/Manufacturer_Vendor_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Vendor_Product_ID__c</fullName>
    <label>Manufacturer/ Vendor Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>