force-app/main/default/objects/GFERP__Item__c/fields/Offers__c.field-meta.xml
<CustomField>
    <fullName>Offers__c</fullName>
    <label>Offers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>