force-app/main/default/objects/GFERP__Item__c/fields/Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Page_Title__c</fullName>
    <label>Page Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>