force-app/main/default/objects/GFERP__Item__c/fields/Searchable__c.field-meta.xml
<CustomField>
    <fullName>Searchable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Searchable</label>
    <type>Checkbox</type>
</CustomField>