force-app/main/default/objects/GFERP__Item__c/fields/Short_Description_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Short_Description_Arabic__c</fullName>
    <label>Short Description (Arabic)</label>
    <type>TextArea</type>
</CustomField>