force-app/main/default/objects/GFERP__Item__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <formula>GFERP__Item_Category__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subcategory</label>
    <type>Text</type>
</CustomField>