force-app/main/default/objects/GFERP__Item__c/listViews/GFERP__All.listView-meta.xml
<ListView>
    <fullName>GFERP__All</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>GFERP__Description__c</columns>
    <columns>Short_Description_Arabic__c</columns>
    <columns>GFERP__Base_Unit_of_Measure__c</columns>
    <columns>GFERP__Qty_Base_on_Hand__c</columns>
    <columns>GFERP__Brand__c</columns>
    <columns>GFERP__Item_Category__c</columns>
    <columns>Category__c</columns>
    <columns>Subcategory__c</columns>
    <columns>GFERP__Standard_Base_Cost__c</columns>
    <columns>GFERP__Standard_Base_Price__c</columns>
    <columns>GFERP__Inventory_Value__c</columns>
    <columns>GFERP__Vendor__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>A1302409</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>GiftCard</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>A1305278</value>
    </filters>
    <label>Test Items</label>
    <language>en_US</language>
</ListView>