force-app/main/default/objects/GFERP__Item__c/listViews/GFERP__Service_Items.listView-meta.xml
<ListView>
    <fullName>GFERP__Service_Items</fullName>
    <columns>NAME</columns>
    <columns>GFERP__Description__c</columns>
    <columns>GFERP__Base_Unit_of_Measure__c</columns>
    <columns>GFERP__Base_UOM_Record_Id__c</columns>
    <columns>GFERP__Low_Level_Code__c</columns>
    <columns>GFERP__Costing_Method__c</columns>
    <columns>GFERP__Item_No_Description__c</columns>
    <columns>GFERP__Qty_Base_on_Hand__c</columns>
    <columns>GFERP__Catch_Weight__c</columns>
    <columns>GFERP__Item_Category__c</columns>
    <columns>GFERP__Landed_Cost1_Pct__c</columns>
    <columns>GFERP__Lot_Picking_Option__c</columns>
    <columns>GFERP__Item_Type__c</columns>
    <columns>GFERP__Outside_Service__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GFERP__Item_Type__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </filters>
    <label>Service Items</label>
    <language>en_US</language>
</ListView>